<resources>
    <string name="app_name">Fuel Friend</string>
    <string name="title_activity_maps">Fuel Friend</string>

    <string name="foot">On Foot</string>
    <string name="bicycle">Bike</string>
    <string name="car">Car</string>
    <string name="title_activity_main">Fuel Friend</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="android_studio">Hi James,</string>
    <string name="android_studio_android_com">You are currently driving your BMW i5.</string>
    <string name="mode_of_movement">Mode of Movement</string>
    <string name="biking">Biking</string>
    <string name="walking">Walking</string>
    <string name="driving">Driving</string>
    <string name="set_consumption_values">Set Consumption Values</string>
    <string name="about">About</string>
    <string name="map">Travel Map</string>
    <string name="add_new_vehicle">Vehicle Database</string>
    <string name="view_vehicles">View Garage</string>
    <string name="remove_vehicle">Remove from Garage</string>
    <string name="add_vehicle">Add to Garage</string>
    <string name="add_to_garage">Add to Garage</string>
    <string name="back">Back</string>
    <string name="statistics">Statistics</string>
    <string name="summary">Summary</string>
    <string name="km">km</string>
    <string name="litre">L</string>
</resources>
