<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_gas_petrol_24dp"
            android:title="@string/set_consumption_values" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_satisfied_24dp"
            android:title="@string/about" />
    </group>

    <item android:title="@string/mode_of_movement">
        <menu>
            <item
                android:id="@+id/nav_bike_marker"
                android:icon="@drawable/ic_bike_24dp"
                android:title="@string/biking" />
            <item
                android:id="@+id/nav_walk_marker"
                android:icon="@drawable/ic_walk_24dp"
                android:title="@string/walking" />
            <item
                android:id="@+id/nav_car_marker"
                android:icon="@drawable/ic_car_24dp"
                android:title="@string/driving" />
        </menu>
    </item>

</menu>
